--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
         "resolveJsonModule": true
     },
     "include": [
-        "node_modules/bc-stubs/bc/**/*.d.ts",
+        "./node_modules/bc-stubs/bc/**/*.d.ts",
         "./src/**/*"
     ],
     // "exclude": [
