--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,9 @@
         "./node_modules/bc-stubs/bc/**/*.d.ts",
         "./src/**/*"
     ],
-    // "exclude": [
-    // 	"node_modules/bc-stubs/bc/Female3DCG_Types.d.ts",
-    // 	"node_modules/bc-stubs/bc/Typedef.d.ts"
-    // ]
+    "exclude": [
+    	"node_modules/bc-stubs/bc/Scripts/lib/three/FBXLoader.d.ts",
+    	"node_modules/bc-stubs/bc/Scripts/lib/three/GLTFLoader.d.ts",
+        "node_modules/bc-stubs/bc/Scripts/lib/webgl/resources/m4.d.ts"
+    ]
 }
