--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,7 +25,7 @@ jobs:
       run: npm run dev
 
     - name: Copy userLoad_dev.user.js to dist
-      run: cp userLoad_dev.user.js dist/
+      run: cp userLoad_dev.user.js dist/dev
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
