测试拦截自定动作的路径

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -27,7 +27,10 @@ jobs:
     - name: Copy userLoad_dev.user.js to dist
       run: cp userLoad_dev.user.js dist/dev/
 
-    - name: Deploy to GitHub Pages
+    - name: Copy img to dist
+      run: cp -r img/* dist/dev/img/
+
+    - name: Deploy dev to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GH_TOKEN }}
