--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,10 @@ jobs:
     - name: Copy userLoad.user.js to dist
       run: cp userLoad.user.js dist/
 
-    - name: Deploy to GitHub Pages
+    - name: Copy img to dist
+      run: cp -r img/* dist/dev/img/
+
+    - name: Deploy mian to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GH_TOKEN }}
