--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -28,7 +28,7 @@ jobs:
       run: cp userLoad_dev.user.js dist/dev/
 
     - name: Copy css to dist
-      run: cp css/* dist/dev/css/
+      run: cp css/* dist/dev/
 
     - name: Deploy dev to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
