添加颜文字库，完善用户帮助，准备0.1.4

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       run: cp userLoad.user.js dist/
 
     - name: Copy css to dist
-      run: cp css/* dist/css/
+      run: cp css/* dist/
 
     - name: Deploy mian to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
