--- a/package.json
+++ b/package.json
@@ -17,12 +17,19 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@types/lz-string": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
     "install": "^0.13.0",
     "npm": "^10.4.0",
     "rollup": "^4.9.6",
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-typescript2": "^0.36.0",
-    "terser": "^5.27.0"
+    "terser": "^5.27.0",
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "build": "rollup -c rollup.config.mjs",
