--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "author": "XiaoSu",
   "license": "ISC",
   "dependencies": {
+    "@types/randomcolor": "^0.5.9",
     "bc-stubs": "^101.0.0",
     "bondage-club-mod-sdk": "^1.1.0",
-    "lz-string": "^1.5.0"
+    "lz-string": "^1.5.0",
+    "randomcolor": "^0.6.2"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
