--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     },
     "include": [
         "./node_modules/bc-stubs/bc/**/*.d.ts",
+        "./node_modules/bondage-club-mod-sdk/dist/bcmodsdk.d.ts",
         "./src/**/*"
     ],
     "exclude": [
