--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,7 +32,7 @@ jobs:
       run: cp translation/* dist/dev/
 
     - name: Copy emojiWorker to dist
-      run: cp src/workers/emojiWorker.js dist/dev/
+      run: cp src/workers/emojiWorkers.js dist/dev/
 
     - name: Deploy dev to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
