feat(dev): 版本号更新到0.4.1; 添加本地开发脚本和配置
- 在 tasks.json 中添加了 npm: local dev 任务
- 在 package.json 中添加了 local_dev 脚本
- 更新了 rollup.dev.config.mjs 配置
- 优化了聊天室模块中的部分功能
- 更新了版本日志

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,21 +1,29 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"type": "npm",
-			"script": "build",
-			"group": "build",
-			"problemMatcher": [],
-			"label": "npm: build",
-			"detail": "rollup -c rollup.config.mjs"
-		},
-		{
-			"type": "npm",
-			"script": "dev",
-			"group": "build",
-			"problemMatcher": [],
-			"label": "npm: dev",
-			"detail": "rollup -c rollup.dev.config.mjs"
-		}
-	]
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "type": "npm",
+            "script": "build",
+            "group": "build",
+            "problemMatcher": [],
+            "label": "npm: build",
+            "detail": "rollup -c rollup.config.mjs"
+        },
+        {
+            "type": "npm",
+            "script": "dev",
+            "group": "build",
+            "problemMatcher": [],
+            "label": "npm: dev",
+            "detail": "rollup -c rollup.dev.config.mjs"
+        },
+        {
+            "type": "npm",
+            "script": "local_dev",
+            "group": "build",
+            "problemMatcher": [],
+            "label": "npm: local dev",
+            "detail": "rollup -c rollup.local.dev.config.mjs"
+        }
+    ]
 }
